--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-thunk": "^1.0.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
